--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -15,9 +15,9 @@
 
     <string name="password_weak">再長一點 &#8230;</string>
     <string name="password_fair">嗯 &#8230;</string>
-    <string name="password_good">加油, 你可以做得更好!</string>
+    <string name="password_good">加油，你可以做得更好！</string>
     <string name="password_strong">快了快了 &#8230;</string>
-    <string name="password_very_strong">厲害, h4x0r 風格!</string>
+    <string name="password_very_strong">厲害，h4x0r 風格！</string>
 
     <string name="label_login_wallets">錢包</string>
     <string name="label_credits">致謝</string>
@@ -32,57 +32,57 @@
     <string name="label_receive_info_gen_qr_code">點選顯示QR碼</string>
     <string name="info_send_prio_fees">較高優先權 = 較高手續費</string>
 
-    <string name="info_xmrto_enabled">BTC付款已啟用, 點選我獲得更多資訊</string>
-    <string name="info_crazypass_enabled">CrAzYpass已啟用, 點選我獲得更多資訊</string>
+    <string name="info_xmrto_enabled">BTC付款已啟用, 點選了解更多</string>
+    <string name="info_crazypass_enabled">CrAzYpass已啟用, 點選了解更多</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>你已輸入Bitcoin地址</b><br/>
-        <i>你將會發送XMR而收款方將會收到BTC(由<b>XMR.TO</b>提供轉換)</i>
+        <b>你輸入了Bitcoin地址</b><br/>
+        <i>你將會發送XMR而收款方將會收到BTC(由 <b>XMR.TO</b> 提供轉換)</i>
     ]]></string>
 
-    <string name="info_send_xmrto_success_order_label">XMR.TO訂單</string>
+    <string name="info_send_xmrto_success_order_label">XMR.TO 訂單</string>
 
     <string name="info_send_xmrto_success_btc">%1$s BTC</string>
 
 
     <string name="info_send_xmrto_paid">等待確認中</string>
     <string name="info_send_xmrto_unpaid">等待付款中</string>
-    <string name="info_send_xmrto_error">XMR.TO發生錯誤(%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC已發送!</string>
+    <string name="info_send_xmrto_error">XMR.TO 發生錯誤(%1$s)</string>
+    <string name="info_send_xmrto_sent">BTC 已發送！</string>
     <string name="info_send_xmrto_query">查詢中 &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
         <b>你可發送 %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>XMR.TO</b>提供的匯率為<b>%3$s BTC</b> <u>(即時)</u></i>.
+        <i><b>XMR.TO</b>提供的<u>即時</u>匯率為<b>%3$s BTC</b></i>.
     ]]></string>
     <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>金額若小於<b>%1$s BTC</b>將可以<u>零確認發送</u>!</i>
+        <i>金額少於<b>%1$s BTC</b> ，將會<u>馬上</u>發送！</i>
     ]]></string>
 
-    <string name="send_available_btc">餘額: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">餘額： %2$s BTC (%1$s XMR)</string>
 
-    <string name="info_paymentid_intergrated">付款ID已嵌入</string>
+    <string name="info_paymentid_intergrated">已加入付款ID</string>
     <string name="info_prepare_tx">正在準備你的交易</string>
 
     <string name="label_send_progress_xmrto_create">建立 XMR.TO 訂單</string>
     <string name="label_send_progress_xmrto_query">查詢 XMR.TO 訂單</string>
     <string name="label_send_progress_create_tx">正在準備 Monero 交易</string>
 
-    <string name="label_send_progress_queryparms">正在查詢 xmr.to 參數</string>
+    <string name="label_send_progress_queryparms">正在查詢 XMR.TO 參數</string>
 
     <string name="label_generic_xmrto_error">XMR.TO 發生錯誤</string>
     <string name="text_generic_xmrto_error">錯誤代碼: %1$d</string>
 
     <string name="text_retry">點選以重試</string>
-    <string name="text_noretry_monero">我們卡住了!</string>
-    <string name="text_noretry">噢不, XMR.TO 現在似乎無法提供服務!</string>
+    <string name="text_noretry_monero">我們卡住了！</string>
+    <string name="text_noretry">不好, XMR.TO 現在似乎無法提供服務！</string>
 
     <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
     <string name="text_send_btc_rate">(匯率: %1$s BTC/XMR)</string>
 
-    <string name="label_send_settings_advanced">進階選項:</string>
+    <string name="label_send_settings_advanced">進階：</string>
 
-    <string name="label_send_btc_xmrto_info">參訪 xmr.to 以支援 &amp; 追蹤</string>
+    <string name="label_send_btc_xmrto_info">參訪 xmr.to 以獲得支援及追蹤交易</string>
     <string name="label_send_btc_xmrto_key_lb">私鑰\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO 私鑰</string>
     <string name="label_send_btc_address">目的地 BTC 地址</string>
@@ -93,13 +93,13 @@
     <string name="label_send_payment_id">付款ID</string>
     <string name="label_send_notes">附註</string>
 
-    <string name="backup_progress">正在備份中</string>
-    <string name="archive_progress">正在封存中</string>
-    <string name="rename_progress">正在重新命名</string>
-    <string name="open_progress">正在檢查daemon連線</string>
-    <string name="changepw_progress">正在更改密碼中</string>
+    <string name="backup_progress">備份中</string>
+    <string name="archive_progress">封存中</string>
+    <string name="rename_progress">重新命名中</string>
+    <string name="open_progress">檢查背景程式連線中</string>
+    <string name="changepw_progress">更改密碼中</string>
 
-    <string name="service_progress">正在關閉錢包 &#8230;\n可能會花費些許時間!</string>
+    <string name="service_progress">處理中 &#8230;\n可能需要些許時間!</string>
 
     <string name="backup_failed">備份失敗!</string>
     <string name="archive_failed">封存失敗!</string>
@@ -108,23 +108,23 @@
     <string name="changepw_success">密碼更改成功</string>
 
     <string name="label_daemon">節點</string>
-    <string name="prompt_daemon">([&lt;名稱&gt;:&lt;密碼&gt;@]&lt;節點&gt;[:&lt;port&gt;])</string>
-    <string name="status_wallet_loading">載入錢包 &#8230;</string>
+    <string name="prompt_daemon">([&lt;使用者&gt;:&lt;密碼&gt;@]&lt;位置&gt;[:&lt;port&gt;])</string>
+    <string name="status_wallet_loading">載入錢包中 &#8230;</string>
     <string name="status_wallet_unloaded">錢包已儲存</string>
     <string name="status_wallet_unload_failed">儲存錢包失敗!</string>
     <string name="status_wallet_connecting">連接中 &#8230;</string>
-    <string name="status_wallet_connect_failed">連接至節點失敗!\n請檢查名稱/密碼。</string>
+    <string name="status_wallet_connect_failed">連接至節點失敗!\n請檢查使用者/密碼。</string>
     <string name="status_wallet_connect_timeout">節點連接逾時!\n請重試或更換節點。</string>
     <string name="status_wallet_node_invalid">節點無效!\n請試試其他節點。</string>
     <string name="status_wallet_connect_ioex">無法連接至節點!\n請試試其他節點。</string>
 
-    <string name="status_wallet_disconnected">中斷連接</string>
+    <string name="status_wallet_disconnected">連接中斷</string>
 
     <string name="status_transaction_failed">交易失敗: %1$s</string>
 
     <string name="send_xmrto_timeout">等待時間過長!</string>
 
-    <string name="service_busy">前一個錢包尚未處理完畢 &#8230;</string>
+    <string name="service_busy">正在處理前一個錢包 &#8230;</string>
 
     <string name="prompt_rename">重新命名 %1$s</string>
 
@@ -134,11 +134,11 @@
     <string name="prompt_fingerprint_auth">你也可以使用指紋來開啟錢包。\n請輕觸你的指紋感應器。</string>
     <string name="prompt_send_password">確認密碼</string>
     <string name="prompt_open_wallet">正在開啟錢包&#8230;</string>
-    <string name="bad_fingerprint">無法辨識的指紋，請再試一次。</string>
-    <string name="bad_password">密碼錯誤!</string>
+    <string name="bad_fingerprint">無法辨識指紋，請再試一次。</string>
+    <string name="bad_password">密碼錯誤！</string>
     <string name="bad_saved_password">儲存的密碼不正確。\n請手動輸入密碼。</string>
     <string name="bad_wallet">錢包不存在!</string>
-    <string name="prompt_daemon_missing">必需要設定節點位置!</string>
+    <string name="prompt_daemon_missing">必須設定節點位置!</string>
     <string name="prompt_wrong_net">錢包不符合選擇的網路</string>
 
     <string name="label_watchonly">(唯讀)</string>
@@ -150,13 +150,13 @@
 
     <string name="service_description">monerujo 服務</string>
 
-    <string name="status_synced">已同步區塊:</string>
+    <string name="status_synced">已同步區塊：</string>
     <string name="status_remaining">剩餘區塊</string>
-    <string name="status_syncing">掃描中:</string>
+    <string name="status_syncing">掃描中：</string>
 
-    <string name="message_strorage_not_writable">外部儲存空間無法寫入!</string>
-    <string name="message_strorage_not_permitted">我們真的很需要你的外部儲存空間權限!</string>
-    <string name="message_camera_not_permitted">沒有相機 = 無法使用QR碼掃描!</string>
+    <string name="message_strorage_not_writable">外部儲存空間無法寫入！</string>
+    <string name="message_strorage_not_permitted">我們真的很需要你的外部儲存空間權限！</string>
+    <string name="message_camera_not_permitted">沒有相機 = 不能掃描QR碼！</string>
 
     <string name="label_copy_viewkey">查看金鑰</string>
     <string name="label_copy_address">公開地址</string>
@@ -164,10 +164,10 @@
     <string name="message_copy_viewkey">查看金鑰已複製至剪貼簿!</string>
     <string name="message_copy_xmrtokey">XMR.TO 金鑰已複製至剪貼簿!</string>
     <string name="message_copy_address">錢包地址已複製至剪貼簿!</string>
-    <string name="message_copy_txid">交易ID 已複製至剪貼簿!</string>
-    <string name="message_nocopy">因安全性因素已停用複製功能!</string>
+    <string name="message_copy_txid">交易ID 已複製至剪貼簿！</string>
+    <string name="message_nocopy">因安全因素已停用複製功能！</string>
 
-    <string name="message_exchange_failed">無法取得匯率!\n使用 XMR/XMR 或重試</string>
+    <string name="message_exchange_failed">無法取得匯率！\n使用 XMR/XMR 或重試</string>
 
     <string name="generate_title">建立錢包</string>
     <string name="generate_name_hint">錢包名稱</string>
@@ -175,21 +175,21 @@
     <string name="generate_fingerprint_hint">允許使用指紋開啟錢包</string>
     <string name="generate_fingerprint_warn"><![CDATA[
         <strong>指紋驗證</strong>
-        <p>啟用指紋驗證後，您可以觀看錢包餘額並接收資金，而無需輸入密碼。</p>
-        <p>但為了提高安全性，monerujo 仍然會要求您在觀看錢包詳細資訊或發送資金時輸入密碼。</p>
+        <p>啟用指紋驗證後，無需輸入密碼，就可以查看錢包餘額並接收資金。</p>
+        <p>但為安全起見，查看錢包詳細資訊或發送資金時，仍須輸入密碼。</p>
         <strong>安全警告</strong>
-        <p>最後，monerujo 想提醒您，任何可以取得您指紋的人都能夠窺視您的錢包餘額。</p>
-        <p>例如，您周遭的惡意使用者可以趁您睡著時使用您的指紋開啟錢包。</p>
+        <p>最後，monerujo 提醒您，任何可以取得您指紋的人都能夠窺視您的錢包餘額。</p>
+        <p>例如，您身邊的惡意使用者可以趁您睡著時使用您的指紋開啟錢包。</p>
         <strong>您確定要啟用本功能嗎？</strong>
     ]]></string>
     <string name="generate_bad_passwordB">密碼不符</string>
     <string name="generate_empty_passwordB">密碼不得空白</string>
     <string name="generate_buttonGenerate">建立錢包!</string>
-    <string name="generate_button_accept">我已抄寫以上資訊!</string>
+    <string name="generate_button_accept">我已抄寫種子碼</string>
 
     <string name="generate_wallet_name">取個名稱!</string>
     <string name="generate_wallet_exists">錢包已存在!</string>
-    <string name="generate_wallet_dot">無法使用以.作為開頭</string>
+    <string name="generate_wallet_dot">無法用.作為開頭</string>
     <string name="generate_wallet_creating">建立錢包</string>
     <string name="generate_wallet_created">錢包已建立</string>
     <string name="generate_wallet_create_failed">錢包建立失敗</string>
@@ -217,7 +217,7 @@
     <string name="generate_check_address">輸入有效的地址</string>
     <string name="generate_check_mnemonic">輸入你的25字種子碼</string>
 
-    <string name="send_amount_btc_xmr">%1$s (指示)</string>
+    <string name="send_amount_btc_xmr">%1$s (參考價)</string>
 
     <string name="send_address_hint">收款者的 XMR 或 BTC 地址</string>
     <string name="send_paymentid_hint">付款ID (選填)</string>
@@ -225,8 +225,8 @@
     <string name="send_notes_hint">註記 (選填)</string>
     <string name="send_generate_paymentid_hint">產生</string>
     <string name="send_qr_hint">掃描</string>
-    <string name="send_send_label">發送我的 Moneroj</string>
-    <string name="send_send_timed_label">發送我的 Moneroj (%1$s)</string>
+    <string name="send_send_label">發送我的 Monero</string>
+    <string name="send_send_timed_label">發送我的 Monero (%1$s)</string>
     <string name="send_qr_invalid">這不是QR碼</string>
     <string name="send_qr_address_invalid">這不是有效的付款QR碼</string>
     <string name="send_address_invalid">這不是有效的地址</string>
@@ -256,8 +256,8 @@
     <string name="tx_list_amount_positive">+ %1$s</string>
 
     <string name="tx_timestamp">時間戳記</string>
-    <string name="tx_id">TX ID</string>
-    <string name="tx_key">TX金鑰</string>
+    <string name="tx_id">交易ID (TXID)</string>
+    <string name="tx_key">交易金鑰 (TX Key)</string>
     <string name="tx_destination">收款地址</string>
     <string name="tx_destination_btc">收款地址\n(BTC)</string>
     <string name="tx_paymentId">付款ID</string>
@@ -277,24 +277,24 @@
 
     <string name="receive_paymentid_hint">付款ID (選填)</string>
     <string name="receive_amount_hint">金額</string>
-    <string name="receive_cannot_open">無法開啟錢包!</string>
+    <string name="receive_cannot_open">無法開啟錢包！</string>
     <string name="receive_paymentid_invalid">16 或 64 Hex 字元 (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">使用整合地址時必須為空白</string>
 
     <string name="receive_amount_too_big">最大值 %1$s</string>
     <string name="receive_amount_negative">最小值 0</string>
-    <string name="receive_amount_nan">輸入的XMR不是個數字</string>
+    <string name="receive_amount_nan">輸入的XMR不是數字</string>
 
     <string name="receive_title">接收</string>
 
     <string name="details_alert_message">將會顯示敏感資訊。\n請注意周遭安全!</string>
     <string name="details_alert_yes">我現在很安全</string>
-    <string name="details_alert_no">不看了!</string>
+    <string name="details_alert_no">不看了！</string>
     <string name="details_title">詳細資訊</string>
 
     <string name="archive_alert_message">錢包檔案將會被備份並且於列表中刪除!</string>
-    <string name="archive_alert_yes">好的!</string>
-    <string name="archive_alert_no">不了!</string>
+    <string name="archive_alert_yes">好的！</string>
+    <string name="archive_alert_no">不了！</string>
 
     <string-array name="priority">
         <item>預設優先權</item>
@@ -308,12 +308,12 @@
     <string name="fab_restore_key">從私鑰回復錢包</string>
     <string name="fab_restore_seed">從25字種子碼回復錢包</string>
 
-    <string name="accounts_drawer_new">Create Account</string>
-    <string name="accounts_drawer_title">Accounts</string>
-    <string name="accounts_new">Added new account #%1$d</string>
-    <string name="tx_account">Account #</string>
+    <string name="accounts_drawer_new">開新戶口</string>
+    <string name="accounts_drawer_title">戶口</string>
+    <string name="accounts_new">已新增戶口 #%1$d</string>
+    <string name="tx_account">戶口 #</string>
 
-    <string name="send_sweepall">Send all confirmed funds in this account!</string>
-    <string name="tx_subaddress">Subaddress #%1$d</string>
-    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
+    <string name="send_sweepall">發送這個戶口的所有已確認款項！</string>
+    <string name="tx_subaddress">附屬地址 #%1$d</string>
+    <string name="generate_address_label_sub">附屬公開地址 #%1$d</string>
 </resources>
