--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -320,6 +320,7 @@
     <string name="tx_subaddress">Subaddress #%1$d</string>
     <string name="generate_address_label_sub">Subaddress pubblico #%1$d</string>
 
+    <string name="language">Italiano</string>
     <string name="menu_language">Language</string>
     <string name="language_system_default">Use System Language</string>
 </resources>
