--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -316,6 +316,7 @@
     <string name="tx_subaddress">附属地址 #%1$d</string>
     <string name="generate_address_label_sub">附属公开地址 #%1$d</string>
 
+    <string name="language">中文（中国）</string>
     <string name="menu_language">语言</string>
     <string name="language_system_default">使用系统语言</string>
 </resources>
