--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -308,12 +308,16 @@
     <string name="fab_restore_key">從私鑰回復錢包</string>
     <string name="fab_restore_seed">從25字種子碼回復錢包</string>
 
-    <string name="accounts_drawer_new">開新戶口</string>
-    <string name="accounts_drawer_title">戶口</string>
-    <string name="accounts_new">已新增戶口 #%1$d</string>
-    <string name="tx_account">戶口 #</string>
+    <string name="accounts_drawer_new">新增帳戶</string>
+    <string name="accounts_drawer_title">帳戶</string>
+    <string name="accounts_new">已新增帳戶 #%1$d</string>
+    <string name="tx_account">帳戶 #</string>
 
-    <string name="send_sweepall">發送這個戶口的所有已確認款項！</string>
-    <string name="tx_subaddress">附屬地址 #%1$d</string>
-    <string name="generate_address_label_sub">附屬公開地址 #%1$d</string>
+    <string name="send_sweepall">發送這個帳戶的所有已確認款項！</string>
+    <string name="tx_subaddress">子地址 #%1$d</string>
+    <string name="generate_address_label_sub">公開子地址 #%1$d</string>
+
+    <string name="language">中文（台灣）</string>
+    <string name="menu_language">語言</string>
+    <string name="language_system_default">使用系統語言</string>
 </resources>
