--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -319,19 +319,19 @@
     <string name="tx_subaddress">Subadresse #%1$d</string>
     <string name="generate_address_label_sub">Öffentliche Subadresse #%1$d</string>
 
-    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+    <string name="fab_restore_ledger">Wallet mit Ledger Nano S wiederherstellen</string>
 
-    <string name="progress_ledger_progress">Communicating with Ledger</string>
-    <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
-    <string name="progress_ledger_lookahead">Retrieving subaddresses</string>
-    <string name="progress_ledger_verify">Verifying keys</string>
-    <string name="progress_ledger_opentx">Doing crazy maths</string>
-    <string name="progress_ledger_mlsag">Hashing stuff</string>
-    <string name="open_wallet_ledger_missing">Please (re)connect Ledger device</string>
+    <string name="progress_ledger_progress">Kommunikation with Ledger</string>
+    <string name="progress_ledger_confirm">Bestätigung auf Ledger benötigt!</string>
+    <string name="progress_ledger_lookahead">Abrufen von Subaddressen</string>
+    <string name="progress_ledger_verify">Prüfe Schlüssel</string>
+    <string name="progress_ledger_opentx">Mache verrückte Mathe</string>
+    <string name="progress_ledger_mlsag">Berechne ein paar Hashwerte</string>
+    <string name="open_wallet_ledger_missing">Bitte Ledger (wieder-)anschließen!</string>
 
-    <string name="accounts_progress_new">Creating account</string>
-    <string name="accounts_progress_update">Updating wallet</string>
+    <string name="accounts_progress_new">Erzeuge Konto</string>
+    <string name="accounts_progress_update">Aktualisiere Wallet</string>
 
-    <string name="toast_ledger_attached">%1$s attached</string>
-    <string name="toast_ledger_detached">%1$s detached</string>
+    <string name="toast_ledger_attached">%1$s angesteckt</string>
+    <string name="toast_ledger_detached">%1$s abgesteckt</string>
 </resources>
