--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -318,28 +318,25 @@
     <string name="accounts_new">Nouveau Compte #%1$d ajouté</string>
     <string name="tx_account">Compte #</string>
 
-    <string name="send_sweepall">Send all confirmed funds in this account!</string>
-    <string name="tx_subaddress">Subaddress #%1$d</string>
-    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
+    <string name="send_sweepall">Envoyer tous les fonds confirmés sur ce compte !</string>
+    <string name="tx_subaddress">Sous-adresse #%1$d</string>
+    <string name="generate_address_label_sub">Sous-adresse publique #%1$d</string>
 
-    <string name="menu_language">Language</string>
-    <string name="language_system_default">Use System Language</string>
+    <string name="fab_restore_ledger">Restaurer depuis Ledger Nano S</string>
 
-    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+    <string name="progress_ledger_progress">Communication avec Ledger</string>
+    <string name="progress_ledger_confirm">Confirmation requise sur Ledger !</string>
+    <string name="progress_ledger_lookahead">Récupération des sous-adresses</string>
+    <string name="progress_ledger_verify">Vérification des clefs</string>
+    <string name="progress_ledger_opentx">En cours de calculs crazy</string>
+    <string name="progress_ledger_mlsag">Trucs de Hachage</string>
+    <string name="open_wallet_ledger_missing">Merci de (re)connecter le Ledger</string>
 
-    <string name="progress_ledger_progress">Communicating with Ledger</string>
-    <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
-    <string name="progress_ledger_lookahead">Retrieving subaddresses</string>
-    <string name="progress_ledger_verify">Verifying keys</string>
-    <string name="progress_ledger_opentx">Doing crazy maths</string>
-    <string name="progress_ledger_mlsag">Hashing stuff</string>
-    <string name="open_wallet_ledger_missing">Please (re)connect Ledger device</string>
+    <string name="accounts_progress_new">Création du compte</string>
+    <string name="accounts_progress_update">Mise à jour du portefeuille</string>
 
-    <string name="accounts_progress_new">Creating account</string>
-    <string name="accounts_progress_update">Updating wallet</string>
-
-    <string name="toast_ledger_attached">%1$s attached</string>
-    <string name="toast_ledger_detached">%1$s detached</string>
+    <string name="toast_ledger_attached">%1$s connecté</string>
+    <string name="toast_ledger_detached">%1$s déconnecté</string>
 
     <string name="progress_nfc_write">Writing Tag</string>
     <string name="nfc_write_failed">Writing Tag failed!</string>
@@ -350,4 +347,7 @@
     <string name="nfc_tag_read_what">I don\'t know what you want!</string>
     <string name="nfc_tag_read_success">Reading Tag successful</string>
     <string name="nfc_tag_tap">NFC Available!</string>
+
+    <string name="menu_language">Language</string>
+    <string name="language_system_default">Use System Language</string>
 </resources>
